# forgekit

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
docs/: adding_a_plugin.md  proposal.md
forgekit/: __init__.py  cli.py  recipe.py  registry.py
forgekit/hw/: __init__.py  detect.py  profiles.py
forgekit/plugins/compressors/: aqlm.py  awq.py  bnb.py  gptq.py  hqq.py  onecompression.py
forgekit/plugins/evaluators/: lm_eval_harness.py  perplexity.py
forgekit/plugins/exporters/: gguf.py  i_dlm_isd.py  mlx.py  vllm.py
forgekit/plugins/trainers/: doc2lora.py  dpo.py  full_finetune.py  grpo.py  i_dlm.py  qat.py  qlora.py  sft.py
forgekit/stages/: __init__.py  compressor.py  data.py  evaluator.py  exporter.py  trainer.py
recipes/: doc2lora_demo.yaml  gemma_qlora_awq_vllm.yaml  llama3_8b_onecompression.yaml  qwen3_4b_qlora_gptq.yaml
tests/: test_aqlm_compressor.py  test_awq_compressor.py  test_bnb_compressor.py  test_doc2lora_trainer.py  test_dpo_trainer.py  test_full_finetune_trainer.py  test_gguf_exporter.py  test_gptq_compressor.py  test_grpo_trainer.py  test_hqq_compressor.py  test_hw_detect.py  test_lm_eval_evaluator.py  test_mlx_exporter.py  test_onecompression_compressor.py  test_perplexity_evaluator.py  test_qat_trainer.py  test_qlora_trainer.py  test_recipe_schema.py  test_registry.py  test_sft_trainer.py  test_vllm_exporter.py
